--- a/index.Rmd
+++ b/index.Rmd
@@ -1,11 +1,12 @@
 ---
-title: "Homepage"
+title: "Learning with Curiosity"
 author: "Anoob Prakash"
 date: "29 August 2018"
 output: 
   html_document: 
-    theme: sandstone
+    theme: cosmo
 ---
+***
+>#Assignments and Projects
 
-#Assignments and Projects
-* [Reading materials on molecular stuff](https://www.molecularecologist.com)
+###[Reading materials on molecular stuff](https://www.molecularecologist.com)
