--- a/index.Rmd
+++ b/index.Rmd
@@ -6,8 +6,9 @@ output:
     theme: cosmo
 ---
 ***
-### _I have not failed. I've just found 10,000 ways that won't work._ - Edison
+#### _I have not failed. I've just found 10,000 ways that won't work._ - Edison
 ***
 >#Assignments and Projects
+[Homework2](homework2.html)  
 
 ###[Reading materials on molecular stuff](https://www.molecularecologist.com)
