classes on atomic vector

--- a/index.Rmd
+++ b/index.Rmd
@@ -19,5 +19,6 @@ output:
   .\ [Homework3](NotesBeamer.pdf)  
 Learning to use beamer and creating ones own presentation using beamer and R markdown.  
 
+...................................................................
 
-###[Reading materials on molecular stuff](https://www.molecularecologist.com)
+#####[Reading materials on molecular stuff](https://www.molecularecologist.com)
