--- a/Homework5dplyr.Rmd
+++ b/Homework5dplyr.Rmd
@@ -4,8 +4,90 @@ author: "Anoob Prakash"
 date: "26 September 2018"
 output: html_document
 ---
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+***
 
+Q. Examine the structure of the iris dataset. How many observations and variables are in the dataset?
+
+```{r, echo=TRUE}
+library(dplyr)
+glimpse(iris)
+
+```
+Iris dataset has 150 observations and 5 variables  
+
+***  
+Q. Create a new data frame iris1 that contains only the species virginica and versicolor with sepal lengths longer than 6 cm and sepal widths longer than 2.5 cm. How many observations and variables are in the dataset?  
+```{r, echo=TRUE}
+iris1 <- filter(iris, 
+       Species %in% c("virginica", "versicolor"), 
+       Sepal.Length > 6,
+       Sepal.Width > 2.5)
+glimpse(iris1)
+```
+***
+
+Q. Now, create a iris2 data frame from iris1 that contains only the columns for Species, Sepal.Length, and Sepal.Width. How many observations and variables are in the dataset?
+
+```{r, echo = TRUE}
+iris2 <- select(iris1, 
+                c(Species, Sepal.Length, Sepal.Width))
+glimpse(iris2) 
+```
+***
+
+Q. Create an iris3 data frame from iris2 that orders the observations from largest to smallest sepal length. Show the first 6 rows of this dataset.
+
+```{r, echo = TRUE}
+iris3 <- arrange(iris2, desc(Sepal.Length))
+head(iris3) 
+```
+***
+
+Q. Create an iris4 data frame from iris3 that creates a column with a sepal area (length * width) value for each observation. How many observations and variables are in the dataset?
+
+```{r, echo = TRUE}
+iris4 <- mutate(iris3, Sepal.Area = Sepal.Length * Sepal.Width)
+
+glimpse(iris4)
+```
+***
+Q. Create iris5 that calculates the average sepal length, the average sepal width, and the sample size of the entire iris4 data frame and print iris5.
+
+```{r, echo = TRUE}
+iris5 <- summarize(iris4, 
+                   meanLength = mean(Sepal.Length), 
+                   meanWidth = mean(Sepal.Width), 
+                   meanArea = mean(Sepal.Area), 
+                   N = n()) 
+print(iris5)
+```
+***
+Q. Finally, create iris6 that calculates the average sepal length, the average sepal width, and the sample size for each species of in the iris4 data frame and print iris6.
+```{r, echo = TRUE}
+iris6 <- summarise(iris4, meanLength = mean(Sepal.Length), 
+                   meanWidth = mean(Sepal.Width), 
+                   meanArea = mean(Sepal.Area), 
+                   N = n())
+print(iris6)
+```
+***
+Q. In these exercises, you have successively modified different versions of the data frame iris1, iris2, iris3, iris4, iris5 and iris6. At each stage, the output data frame from one operation serves as the input from the next.
+
+A more efficient way to do this is to use the pipe operator %>% from the tidyr package. See if you can rework all of your previous statements into an extended piping operation that uses iris as the input and generates iris6 as the output.
+
+```{r, echo = TRUE}
+iris6 <- iris %>%
+  filter(Species %in% c("virginica", "versicolor"), 
+       Sepal.Length > 6,
+       Sepal.Width > 2.5) %>%
+  group_by(Species) %>%
+  mutate(Sepal.Area = Sepal.Length * Sepal.Width) %>%
+  summarise(meanLength = mean(Sepal.Length), 
+                   meanWidth = mean(Sepal.Width), 
+                   meanArea = mean(Sepal.Area), 
+                   SampleSize = n())
+print(iris6)
+```
