--- a/Homework6DataDistribution.Rmd
+++ b/Homework6DataDistribution.Rmd
@@ -27,11 +27,7 @@ print(SpsTrait)
 ```
 ***
 ####Simulating and Fitting Data Distributions
-This exercise teaches you how to compare a histogram of continuous (or integer) data to the probability density functions for different statistical distributions.
-
-Set up a new .Rmd file for this exercise. Copy and paste the code below into different code chunks, and then read the text and run the code chunks one at a time to see what they do. You probably won’t understand everything in the code, but this is a good start for seeing some realistic uses of ggplot. We will cover most of these details in the next few weeks.
-
-Once the code is in and runs, try reading in your own .csv file into a data frame with this code chunk:
+The data used for fitting the distribution is from a study conducted by me on `moist deciduous trees` under particulate pollution of Western Ghats of Kerala, India. Out of the several variable studied, I am using the `relative water content` ([RWC](MyDataFile.csv)) as the variable for testing the effects of particulate pollution. :
 
 ```{r}
 z <- read.table("MyDataFile.csv",header=TRUE,sep=",", stringsAsFactors=FALSE) # myVar is the RWC for the species studied
@@ -47,17 +43,101 @@ library(MASS) # for maximum likelihood estimation
 
 ***
 ####Plot histogram of data
-Plot a histogram of the data, using a modification of the code from lecture. Here we are switching from qplot to ggplot for more graphics options. We are also rescaling the y axis of the histogram from counts to density, so that the area under the histogram equals 1.0.
+Plot a histogram of the data using ggplot. Rescaling the y axis of the histogram from counts to density, so that the area under the histogram equals 1.0.
 ```{r}
 p1 <- ggplot(data=z, aes(x=myVar, y=..density..)) +
   geom_histogram(color="grey60",fill="cornsilk",size=0.2) 
 print(p1)
 ```
+
+***
+
 ####Add empirical density curve
-Now modify the code to add in a kernel density plot of the data. This is an empirical curve that is fitted to the data. It does not assume any particular probability distribution, but it smooths out the shape of the histogram:
+Modifying the code to add in a kernel density plot of the data. This is an empirical curve that is fitted to the data. It does not assume any particular probability distribution, but it smooths out the shape of the histogram:
 ```{r}
 p1 <-  p1 +  geom_density(linetype="dotted",size=0.75)
 print(p1)
 
 ```
 
+***
+
+####Get maximum likelihood parameters for normal
+Fitting a normal distribution to the data and grabbing the maximum likelihood estimators of the two parameters of the normal, the mean and the variance:
+
+```{r}
+normPars <- fitdistr(z$myVar,"normal")
+print(normPars)
+str(normPars)
+normPars$estimate["mean"] # note structure of getting a named attribute
+```
+
+***
+
+####Plot normal probability density
+Let’s call the dnorm function inside ggplot’s stat_function to generate the probability density for the normal distribution. 
+
+Note: Read about  stat_function in the help system to see how you can use this to add a smooth function to any ggplot. Note that we first get the maximum likelihood parameters for a normal distribution fitted to thse data by calling fitdistr. Then we pass those parameters (meanML and sdML to  stat_function:
+```{r}
+meanML <- normPars$estimate["mean"]
+sdML <- normPars$estimate["sd"]
+
+xval <- seq(0,max(z$myVar),len=length(z$myVar))
+
+ stat <- stat_function(aes(x = xval, y = ..y..), fun = dnorm, colour="red", n = length(z$myVar), args = list(mean = meanML, sd = sdML))
+ p1 + stat
+```
+
+
+***
+
+####Plot exponential probability density
+Now let’s use the same template and add in the curve for the exponential:
+```{r}
+expoPars <- fitdistr(z$myVar,"exponential")
+rateML <- expoPars$estimate["rate"]
+
+stat2 <- stat_function(aes(x = xval, y = ..y..), fun = dexp, colour="blue", n = length(z$myVar), args = list(rate=rateML))
+ p1 + stat + stat2
+```
+
+***
+
+####Plot uniform probability density
+For the uniform, we don’t need to use fitdistr because the maximum likelihood estimators of the two parameters are just the minimum and the maximum of the data:
+```{r}
+stat3 <- stat_function(aes(x = xval, y = ..y..), fun = dunif, colour="darkgreen", n = length(z$myVar), args = list(min=min(z$myVar), max=max(z$myVar)))
+ p1 + stat + stat2 + stat3
+```
+
+***
+
+####Plot gamma probability density
+```{r}
+gammaPars <- fitdistr(z$myVar,"gamma")
+shapeML <- gammaPars$estimate["shape"]
+rateML <- gammaPars$estimate["rate"]
+
+stat4 <- stat_function(aes(x = xval, y = ..y..), fun = dgamma, colour="brown", n = length(z$myVar), args = list(shape=shapeML, rate=rateML))
+ p1 + stat + stat2 + stat3 + stat4
+```
+
+***
+
+####Plot beta probability density
+This one has to be shown in its own plot because the raw data must be rescaled so they are between 0 and 1, and then they can be compared to the beta.
+
+```{r}
+pSpecial <- ggplot(data=z, aes(x=myVar/(max(myVar + 0.1)), y=..density..)) +
+  geom_histogram(color="grey60",fill="cornsilk",size=0.2) + 
+  xlim(c(0,1)) +
+  geom_density(size=0.75,linetype="dotted")
+
+betaPars <- fitdistr(x=z$myVar/max(z$myVar + 0.1),start=list(shape1=1,shape2=2),"beta")
+shape1ML <- betaPars$estimate["shape1"]
+shape2ML <- betaPars$estimate["shape2"]
+
+statSpecial <- stat_function(aes(x = xval, y = ..y..), fun = dbeta, colour="orchid", n = length(z$myVar), args = list(shape1=shape1ML,shape2=shape2ML))
+pSpecial + statSpecial
+```
+From the above fittings, I found the `normal distribution to be a better fit` for the data on RWC for moist deciduous species under particulate pollution stress.
