--- a/index.Rmd
+++ b/index.Rmd
@@ -26,7 +26,10 @@ Doing some basic coding assignments and learning  to use regular expressions in 
 Learning to code in dplyr and how to use piping for efficient coding.
 
   .\ [Homework 6](Homework6DataDistribution.html)  
-Simulating and fitting data distributions
+Simulating and fitting data distributions.
+
+  .\ [Homework 7](Homework7CFakedata.html)  
+Creating Fake Data Sets To Explore Hypotheses.
   
 ***
 #####[Reading materials on molecular stuff](https://www.molecularecologist.com)
