class notes for ggplot

--- a/Homework10Looping.Rmd
+++ b/Homework10Looping.Rmd
@@ -197,6 +197,6 @@ lReg <- summary(expModel)
 pVal <- lReg$coefficients[2,4]  
 pVal
     
-# The p-value thus generated was not significant enough to denote a that a change in temperature affects the water use efficiency, which was the initial hypothesis for the experiment. The randomisation tests also gives a similar result, confirming the validity of the hypothesis.
+# The p-value thus generated was not significant enough to denote that a change in temperature affects the water use efficiency, which was the initial hypothesis for the experiment. The randomisation tests also gives a similar result, confirming the validity of the hypothesis.
 
 ```
