--- a/Homework10Looping.Rmd
+++ b/Homework10Looping.Rmd
@@ -41,7 +41,7 @@ xVar <- 12
 yVar <- 9
 
 ##############################################################
-# FUNCTION:Crreate Matrix (dMat)
+# FUNCTION:Create Matrix (dMat)
 # INPUTS:integer values for matrix dimensions
 # OUTPUTS:matrix
 #-------------------------------------------------------------
