--- a/leaflet_code.Rmd
+++ b/leaflet_code.Rmd
@@ -1,14 +1,9 @@
 ---
-title: "Leaflet for R"
+title: "Leaflet documentation"
 author: "Anoob Prakash"
-date: "22 November 2018"
-output:
-  html_document: default
-  pdf_document: default
-editor_options:
-  chunk_output_type: console
+date: "29 November 2018"
+output: html_document
 ---
-
 ## Why leaflet?
 It's one of the openly used openscript libraries for making interactive maps and used by many to publish maps. This R package helps bring the same functionality to R, and makes it easy to integrate and control Leaflet maps in R.
 Create maps right from the R console or RStudio
@@ -38,7 +33,7 @@ You create a Leaflet map with these basic steps:
 ###Basic example
 To get a sense of the package, lets start out with an example for its usage:
 
-```{r}
+```
 library(leaflet)
 
 m <- leaflet() %>%
@@ -50,8 +45,8 @@ m  # Print the map
 ```
 Note that using the print() to print the output in Rmarkdown does not give the actual output.
 
-###Map views
-```{r}
+###Functions
+```
 
 require(leaflet)
 m <- leaflet() %>% addTiles()
@@ -86,13 +81,13 @@ c. From the `maps package`
 
 From Base R
 
-```{r}
+```
 df = data.frame(Lat = 1:10, Long = rnorm(10))
 leaflet(df) %>% addTiles() %>% addCircles()
 ```
 
 From the `maps package`
-```{r}
+```
 require("maps")
 library(maps)
 mapStates = map("state", fill = TRUE, plot = FALSE)
@@ -106,7 +101,7 @@ leaflet(data = mapStates) %>% addTiles() %>%
 
 The easiest way to add tiles is by calling addTiles() with no arguments; by default, OpenStreetMap tiles are used.
 
-```{r}
+```
 
 m <- leaflet() %>% setView(lng=-73.2013454, lat=44.4783732, zoom = 12)
 m %>% addTiles() #default:OpenStreetMap
@@ -115,25 +110,25 @@ m %>% addTiles() #default:OpenStreetMap
 ####A) Third party tiles
 Popular free third-party basemaps can be added using the `addProviderTiles()` function, which is implemented using the leaflet-providers plugin.
 The list of third party map providers can also be obtained by running the below code:
-```{r}
+```
 head(names(providers))
 ```
 
 ##### Open TopoMap:
 
-```{r, echo=FALSE}
+```
 m %>% addProviderTiles(providers$OpenTopoMap)
 ```
 
 ##### Stamen Toner:
 
-```{r, echo=FALSE}
+```
 m %>% addProviderTiles(providers$Stamen.Toner)
 ```
 
 ##### ESRI NatGeoWorldMap:
 
-```{r, echo=FALSE}
+```
 m %>% addProviderTiles(providers$Esri.NatGeoWorldMap)
 ```
 
@@ -141,7 +136,7 @@ m %>% addProviderTiles(providers$Esri.NatGeoWorldMap)
 ####B) Stacking base maps
 With the adjustent in opacity, different base maps can be stacked on top of each other.
 
-```{r}
+```
 
 m %>% addProviderTiles(providers$Esri.NatGeoWorldMap) %>%
   addProviderTiles(providers$Stamen.TonerLines,
@@ -156,7 +151,7 @@ m %>% addProviderTiles(providers$Esri.NatGeoWorldMap) %>%
 
 Circles:
 
-```{r}
+```
 cities <- read.csv(textConnection("
 City,Lat,Long,Pop
 Boston,42.3601,-71.0589,645966
@@ -176,7 +171,7 @@ leaflet(cities) %>% addTiles() %>%
 
 Rectangles:
 
-```{r}
+```
 leaflet() %>% addTiles() %>%
   addRectangles(
     lng1=-118.456554, lat1=34.078039,
@@ -186,7 +181,7 @@ leaflet() %>% addTiles() %>%
 ```
 
 ###Markers
-```{r}
+```
 data(quakes) #Locations of Earthquakes off Fiji
 
 head(quakes)
@@ -198,7 +193,7 @@ leaflet(data = quakes[1:20,]) %>% addTiles() %>%
 
 When there are a large number of markers on the map, you can cluster them together using the argument `clusterOptions`.
 
-```{r}
+```
 leaflet(quakes) %>% addTiles() %>% addMarkers(
   clusterOptions = markerClusterOptions()
 )
@@ -209,14 +204,11 @@ leaflet(quakes) %>% addTiles() %>% addMarkers(
 
 Various utility functions can be used to augment your map with additional elements. One such example is given below:
 
-```{r}
-leaflet(quakes) %>% addTiles() %>% addMarkers(
-  clusterOptions = markerClusterOptions()
-) %>% addMeasure() %>% addMiniMap()
+```
+m <- leaflet() %>% addTiles()
+
+m %>%
+  fitBounds(-73.2, 44.48,-73.1, 44.49)  %>% #Set the bounds of a map
+  addMeasure()
 ```
 
-
-***
-source: https://rstudio.github.io/leaflet/
-
-Full extent of leaflet application: https://leafletjs.com/examples.html
